keywords: 'what"s new, features, new, release notes, enhancements, fixes' 
summary: Découvrez les nouveautés de la copie et de la synchronisation BlueXP. 
---
= Nouveautés de la copie et de la synchronisation BlueXP
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Découvrez les nouveautés de la copie et de la synchronisation BlueXP.



== 2 juin 2024

Le service de copie et de synchronisation BlueXP a été mis à jour pour corriger quelques bugs. Le courtier en données a également été mis à jour pour appliquer des mises à jour de sécurité. La nouvelle version du courtier de données est 1.0.52.



== 8 avril 2024



=== Prise en charge de RHEL 8.9

Le courtier en données est désormais pris en charge sur les hôtes exécutant Red Hat Enterprise Linux 8.9.

https://docs.netapp.com/us-en/bluexp-copy-sync/task-installing-linux.html#linux-host-requirements["Afficher la configuration requise pour l'hôte Linux"].



== 11 février 2024



=== Filtrer les répertoires par regex

Les utilisateurs ont désormais la possibilité de filtrer les répertoires à l'aide de regex.

https://docs.netapp.com/us-en/bluexp-copy-sync/task-creating-relationships.html#create-other-types-of-sync-relationships["En savoir plus sur la fonction *exclure les répertoires*."]



== 26 novembre 2023



=== Prise en charge de la classe de stockage à froid pour Azure Blob

Le Tier de stockage à froid Azure Blob est désormais disponible lors de la création d'une relation de synchronisation.

https://docs.netapp.com/us-en/bluexp-copy-sync/task-creating-relationships.html["En savoir plus sur la création d'une relation de synchronisation."]



=== Prise en charge de la région de tel Aviv dans les courtiers de données AWS

Tel Aviv est désormais prise en charge par une région lors de la création d'un courtier en données dans AWS.
