@@ -767,7 +767,6 @@
   <block id="2002e7315a54bdc5f69ae33f895b3361" category="paragraph">Vous voulez accélérer les performances de la relation 1 pour ajouter un nouveau courtier de données au groupe de courtier de données A. Dans la mesure où le groupe A gère également la relation de synchronisation 3, les performances de synchronisation de la relation sont également automatiquement accélérées.</block>
   <block id="c73532751f2f234c7f0d9ca93cb4b15b" category="section-title">Nombre de courtiers de données dans un groupe</block>
   <block id="31361c8d27e70295df2bfa32fdeeb659" category="inline-link-macro">En savoir plus sur la façon de déterminer si plusieurs courtiers de données sont nécessaires</block>
-  <block id="0a134fa70f4699a5c8408ed138b7162b" category="paragraph">Dans de nombreux cas, un seul courtier de données peut répondre aux exigences de performance d'une relation de synchronisation. Si ce n'est pas le cas, vous pouvez accélérer les performances de synchronisation en ajoutant des courtiers de données supplémentaires au groupe. Mais vous devez d'abord vérifier d'autres facteurs qui peuvent avoir un impact sur les performances de synchronisation. <block ref="871c8177954bc9fc0961cd3c58102f39" category="inline-link-macro-rx"></block>.</block>
   <block id="301ebdf8067a213d5a55c65fbb488290" category="section-title">Recommandations en matière de sécurité</block>
   <block id="cbf7ac8dbbee47678fd563919556b802" category="paragraph">Pour assurer la sécurité de votre courtier en données, NetApp recommande les éléments suivants :</block>
   <block id="e55d32d29f143f215d415eb6175f7da2" category="list-text">SSH ne doit pas autoriser X11 Forwarding</block>
@@ -1699,7 +1698,6 @@
   <block id="59e767a49496d7be5777e4cf48d4105c" category="list-text">Copiez les listes de contrôle d’accès uniquement, les fichiers uniquement ou les listes de contrôle d’accès et les fichiers à partir d’un serveur SMB en activant un paramètre lors de la création d’une relation ou après la création d’une relation.</block>
   <block id="e0c7c4832f74beb01a9b0b7f4ceb62b9" category="list-text">Compatibilité Node.js</block>
   <block id="e0536b4ae9bb49a9633b77ce78d68e0a" category="section-title">Accélérez les performances de synchronisation</block>
-  <block id="baf8ddab0e1f4d03b84d74129178e3e2" category="section-title">Mises à jour</block>
   <block id="11d4a32f12cfcb43ae53ae70017809c1" category="section-title">Configurez les notifications</block>
   <block id="b74bf8e34d66bdbffc7544ea6e132661" category="section-title">Modifier les paramètres d'une relation de synchronisation</block>
   <block id="76db6b34fbbc30a6bf267e7b8d4ded4b" category="section-title">Supprimer les relations</block>
@@ -1922,4 +1920,22 @@
   <block id="6849ea484f5664c887acc6f1ff990dfd" category="section-title">2 juin 2024</block>
   <block id="cfa477f3b89d95c12ff30d6390b89dd9" category="paragraph">Le service de copie et de synchronisation BlueXP a été mis à jour pour corriger quelques bugs. Le courtier en données a également été mis à jour pour appliquer des mises à jour de sécurité. La nouvelle version du courtier de données est 1.0.52.</block>
   <block id="8c5259dd9c9515862d9ef62edaaa899d" category="list-text">Cluster ONTAP sur site (NFS ou SMB)</block>
+  <block id="bd847a13f3c228a3e7b266af4584fd3a" category="paragraph">Dans de nombreux cas, un seul courtier de données peut répondre aux exigences de performance d'une relation de synchronisation. Si ce n'est pas le cas, vous pouvez accélérer la synchronisation en ajoutant des courtiers de données supplémentaires au groupe. Mais vous devez d'abord vérifier d'autres facteurs qui peuvent avoir un impact sur les performances de synchronisation. <block ref="871c8177954bc9fc0961cd3c58102f39" category="inline-link-macro-rx"></block>.</block>
+  <block id="cfe8bc2d032af638edef6aa48eddc97d" category="summary">Si vous prévoyez de synchroniser les données entre le stockage objet et le stockage objet (par exemple, Amazon S3 vers Azure Blob), vous devez préparer le groupe de courtiers en données avant de créer la relation de synchronisation.</block>
+  <block id="654ac38b7369238d760ed41821bfe8f6" category="doc">Préparez un courtier en données pour la synchronisation des données entre le stockage objet</block>
+  <block id="bbe48fb854ea022537208eeeff822f91" category="paragraph-title">Description de la tâche</block>
+  <block id="8b29cf1534de96e7d8703b38dbc8b848" category="paragraph">Pour préparer le groupe de courtiers de données, vous devez modifier la configuration du scanner. Si vous ne modifiez pas la configuration, vous risquez de constater des problèmes de performances pour cette relation de synchronisation.</block>
+  <block id="f497dbcbf16cefa2ef6d812f89825438" category="paragraph">Le groupe de courtiers en données que vous utilisez pour synchroniser les données entre le stockage objet et le stockage objet doit uniquement gérer ces types de relations de synchronisation. Si le groupe de courtiers en données gère un autre type de relation de synchronisation (par exemple, NFS vers NFS ou stockage objet vers SMB), les performances de ces relations de synchronisation peuvent être affectées de manière négative.</block>
+  <block id="ab1484a815310bbc60b24a9aae62d58f" category="list-text">Depuis la copie et la synchronisation BlueXP, sélectionnez *gérer les Data Brokers*.</block>
+  <block id="4c9240708988b2ebe5983da5eadc4613" category="inline-image-macro">Capture d'écran de l'icône des paramètres</block>
+  <block id="c633ea4565616bf2769598e328f3a188" category="list-text">Sélectionnez <block ref="1acf1c98ddec5f9f5f83183a48b45a01" category="inline-image-macro-rx" type="image"></block></block>
+  <block id="afc8ea6a55a9970b854c3ce2b28ba9b5" category="list-text">Mettez à jour la configuration du scanner :</block>
+  <block id="65cb0c9fd06e63d9940a79bb99abc58e" category="list-text">Remplacez *scanner Concurrency* par *1*.</block>
+  <block id="996c7ea13fea79c025562f291dbdb16b" category="list-text">Remplacez *limite des processus du scanner* par *1*.</block>
+  <block id="456191f26693536a8d701897a3127c23" category="list-text">Sélectionnez *Unify Configuration*.</block>
+  <block id="a700bfe82fb8fb28d4bca63bc5ae7922" category="paragraph">La copie et la synchronisation BlueXP mettent à jour la configuration du groupe de courtiers de données.</block>
+  <block id="58eaebf972358f1cf03d386a4ade1a0f" category="paragraph-title">Et la suite ?</block>
+  <block id="c28d873efe941bde2e3f61ce0bfc122b" category="paragraph">Vous pouvez maintenant créer la relation de synchronisation entre le stockage objet à l'aide du groupe de courtiers de données que vous venez de configurer.</block>
+  <block id="9fc076386261ca80bfc67f7f57c641d3" category="section-title">14 juillet 2024</block>
+  <block id="c18c776847f6d7588ddeab0632527364" category="paragraph">Nous avons mis à jour le service de copie et de synchronisation BlueXP ainsi que le courtier en données pour corriger quelques bugs. La nouvelle version du courtier de données est 1.0.53.</block>
 </blocks>
